tests/NormalTests/paczka1/fuzzy1/64490202.err
Error in line 1: M9FP A769 93,6
Error in line 4: M9FP S35 180,0
Error in line 10: M9FP A769 55,3
Error in line 8: 9HRBgUilOq A769 83,0
Error in line 20: 9HRBgUilOq A143 86,3
Error in line 24: 9HRBgUilOq S3 8,34
Error in line 29: nV0SB S35 96,5
Error in line 31: M9FP S3 232,8
